--- a/learn-all-with-Javascript/grab-market/index.html
+++ b/learn-all-with-Javascript/grab-market/index.html
@@ -47,13 +47,12 @@
           </div>
           <div class="product-contents">
             <span class="product-name">키보드 1호</span>
-            <span class="product-price">100만원</span>
+            <span class="product-price">160만원</span>
             <div class="product-seller">
               <img
                 class="product-avatar"
                 src="images/icons/avatar.png"
-                alt=""
-              />
+                alt=""/>
               <span>찌호</span>
             </div>
           </div>
